<resources>
    <string name="app_name">MYMovies</string>
    <string name="app_home">My Movies</string>
    <string name="app_poster_image">Poster Image</string>
    <string name="app_original_title">Original Title:</string>
    <string name="app_overview">Overview:</string>
    <string name="app_release_date">Release Date:</string>
    <string name="app_user_rating">User Rating:</string>
    <string name="app_top_rated">Top rated movies</string>
    <string name="app_favorites">Favorites</string>
    <string name="app_popular">Popular movies</string>
    <string name="app_reviews">Reviews</string>
    <string name="app_trailers">Trailers</string>
    <string name="app_general_information">General Information</string>
    <string name="app_author">Author: %1$s</string>
    <string name="app_favorite_toggle">Favorite toggle</string>
    <string name="app_home_label">Movies</string>
    <string name="app_favorites_label">Favorites</string>
    <string name="app_favorites_explanation">Add favorites movies from details to populate this list</string>
</resources>
