<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/app_poster_image"
            android:scaleType="fitXY"
            app:image_url="@{ backdropImage }"
            app:layout_constraintDimensionRatio="2:1.15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivPoster">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_small">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_original_title"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_overview_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_micro"
                    android:text="@string/app_overview"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tv_title_label"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_label" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_rating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_micro"
                    android:text="@string/app_user_rating"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tv_title_label"
                    app:layout_constraintTop_toBottomOf="@id/tv_overview" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_release_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_micro"
                    android:text="@string/app_release_date"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tv_title_label"
                    app:layout_constraintTop_toBottomOf="@id/tv_rating" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_small"
                    android:layout_marginLeft="@dimen/space_small"
                    android:text="@{ title }"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_title_label"
                    app:layout_constraintTop_toTopOf="@id/tv_title_label"
                    tools:ignore="RtlHardcoded"
                    tools:text="Avenger Endgame" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_micro"
                    android:text="@{ releaseDate }"
                    app:layout_constraintEnd_toEndOf="@id/tv_title"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toTopOf="@id/tv_release_date_label"
                    tools:text="25/10/2019" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{ rating }"
                    app:layout_constraintEnd_toEndOf="@id/tv_title"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toTopOf="@id/tv_rating_label"
                    tools:text="8.5" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{ overview }"
                    app:layout_constraintEnd_toEndOf="@id/tv_title"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toTopOf="@id/tv_overview_label"
                    tools:text="After to many things" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    TODO Add previews-->

    <data>

        <variable
            name="backdropImage"
            type="String" />

        <variable
            name="overview"
            type="String" />

        <variable
            name="title"
            type="String" />

        <variable
            name="rating"
            type="String" />

        <variable
            name="releaseDate"
            type="String" />

    </data>
</layout>